fcc/src/snapshots/fcc__preprocessor_tests__tests__define_integer.snap
---
source: fcc/src/preprocessor_tests.rs
assertion_line: 41
expression: "pp(\"#define LIMIT 42\\nint x = LIMIT;\")"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "x",
    ),
    Whitespace(
        " ",
    ),
    Assign,
    Whitespace(
        " ",
    ),
    IntegerLiteral(
        APInt {
            width: 6,
            signed: false,
            value: 42,
        },
    ),
    Semicolon,
]
