fcc/src/snapshots/fcc__preprocessor_tests__tests__define_keyword.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define MYINT int\\nMYINT x;\")"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "x",
    ),
    Semicolon,
]
