fcc/src/snapshots/fcc__preprocessor_tests__tests__define_no_body.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define FLAG\\nint FLAG;\")"
---
[
    KwInt,
    Semicolon,
]
