fcc/src/snapshots/fcc__preprocessor_tests__tests__if_defined.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define X\\n#if defined(X)\\nint a;\\n#endif\\n#if defined(Y)\\nint b;\\n#endif\\nint c;\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
    KwInt,
    Identifier,
    Semicolon,
]
