fcc/src/snapshots/fcc__preprocessor_tests__tests__if_elif_taken.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#if 0\\nint a;\\n#elif 1\\nint b;\\n#endif\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
]
