fcc/src/snapshots/fcc__preprocessor_tests__tests__if_expr.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#if 2 + 3 > 4\\nint a;\\n#endif\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
]
