fcc/src/snapshots/fcc__preprocessor_tests__tests__if_false.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#if 0\\nint a;\\n#endif\\nint b;\")"
---
[
    KwInt,
    Whitespace(
        " ",
    ),
    Identifier(
        "b",
    ),
    Semicolon,
]
