fcc/src/snapshots/fcc__preprocessor_tests__tests__if_macro_value.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define LEVEL 3\\n#if LEVEL > 2\\nint a;\\n#endif\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
]
