fcc/src/snapshots/fcc__preprocessor_tests__tests__if_skipped.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#if 1\\nint a;\\n#endif\\nint b;\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
]
