fcc/src/snapshots/fcc__preprocessor_tests__tests__ifdef_defined.snap
---
source: fcc/src/preprocessor_tests.rs
expression: "pp(\"#define X\\n#ifdef X\\nint a;\\n#endif\\nint b;\")"
---
[
    KwInt,
    Identifier,
    Semicolon,
    KwInt,
    Identifier,
    Semicolon,
]
